--- a/scss/_howWeCanHelpComponent.scss
+++ b/scss/_howWeCanHelpComponent.scss
@@ -4,7 +4,7 @@
     .row {
       .column-1 {
         img {
-          height: 500px;
+          height: 580px;
           width: 550px;
         }
       }
@@ -22,7 +22,7 @@
           font-weight: 700;
           // font-size: 54px;
           margin-bottom: 1.1rem;
-          text-transform: capitalize;
+          text-transform: uppercase;
         }
         p {
           color: $darkBlue;
