--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,3 +4,7 @@ $blue: #1e90ff;
 $white: #ffffff;
 $black: #000000;
 $darkBlue: #242874;
+$bg-green: #2ecc71;
+$bg-blue: #5543d1;
+$bg-red: #ff586e;
+$bg-orange: #ffa808;
