--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,8 +3,10 @@
 @import "navComponent";
 @import "headerComponent";
 @import "headSectionComponent";
-@import "makeWebsiteComponent";
-@import "makeWebsiteComponent";
+@import "cardComponent";
 @import "howWeCanHelpComponent";
+@import "helpProcessComponent";
+@import "makeWebsiteComponent";
+@import "contactUsComponent";
 
 @import "footerComponent";
