--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
   font-family: "Poppins", -apple-system, Helvetica, sans-serif;
   line-height: 1.6; }
 
+::selection {
+  color: #ffffff;
+  background: #2ecc71; }
+
 a {
   color: inherit;
   text-decoration: none; }
@@ -36,7 +40,8 @@ a {
   width: 100%;
   transition: all 0.5s;
   position: fixed;
-  z-index: 100; }
+  z-index: 100;
+  color: #242874; }
 
 .bg__white {
   width: 100%;
@@ -140,7 +145,7 @@ a {
   border: 2px solid #1e90ff;
   background: #1e90ff;
   padding: 10px 32px;
-  border-radius: 100px;
+  border-radius: 10px;
   color: #ffffff;
   cursor: pointer;
   transition: all 0.5s;
@@ -266,8 +271,8 @@ a {
       .head__section__container > .page__wrapper .row h1 {
         font-family: "Source Sans Pro", sans-serif;
         font-weight: 700;
-        font-size: 54px;
-        text-transform: capitalize;
+        font-size: 60px;
+        text-transform: uppercase;
         margin: 0.5rem 0; }
         .head__section__container > .page__wrapper .row h1 > span {
           color: #1e90ff; }
@@ -278,14 +283,15 @@ a {
     .head__section__container > .page__wrapper {
       height: 80%; }
       .head__section__container > .page__wrapper .row .column-1 .slogan__1 {
-        font-size: 1.1rem; }
+        font-size: 1rem; }
       .head__section__container > .page__wrapper .row .column-1 .slogan__1__p {
-        padding-right: 0; }
+        padding-right: 0;
+        font-size: 15.5px; }
       .head__section__container > .page__wrapper .row .column-1 .custom__class {
         width: max-content;
         padding: 10px 20px; }
       .head__section__container > .page__wrapper .row .column-1 h1 {
-        font-size: 2.2rem; }
+        font-size: 1.9rem; }
       .head__section__container > .page__wrapper .row .column-2 {
         margin-top: 3rem; }
         .head__section__container > .page__wrapper .row .column-2 .pic6 {
@@ -301,90 +307,100 @@ a {
             height: 280px;
             width: 380px; } }
 
-.make__website__container {
+.card__container {
+  margin-top: 4rem;
   position: relative;
   background-image: url("../public/images/bg_5.jpg");
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
   padding: 5rem 0;
-  width: 100%; }
+  width: 100%;
+  overflow-x: hidden;
+  padding: 5rem 0; }
+  .card__container .cards {
+    cursor: pointer; }
 
-.side__text {
-  color: #242874;
-  text-transform: capitalize;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
-  font-size: 2.5rem; }
+.icon-bx-wrapper {
+  position: relative; }
 
-.make__website__cta {
-  width: max-content;
-  border: 2px solid #1e90ff;
-  background: #ffffff;
-  padding: 10px 32px;
-  border-radius: 100px;
-  color: #1e90ff;
-  cursor: pointer;
+.icon-bx-wraper.style-4 {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 4px rgba(31, 66, 135, 0.1);
+  padding: 30px;
   transition: all 0.5s; }
-  .make__website__cta:hover {
-    transition: all 0.5s;
-    border: 2px solid #1e90ff;
-    color: #ffffff;
-    background-color: #1e90ff; }
-  .make__website__cta i {
-    transform: scale(0.7); }
-  .make__website__cta span {
-    margin-left: 5px; }
+
+.icon-bx-wraper .style-4 .icon-bx-sm {
+  width: 70px;
+  height: 70px;
+  line-height: 70px; }
+
+.m-b20 {
+  margin-bottom: 20px; }
+
+.icon-bx-sm.radius {
+  border-radius: 100%; }
+
+.icon-bx-wraper.style-4 .icon-bx-sm i {
+  font-size: 35px; }
+
+.icon-bx-sm {
+  display: inline-block;
+  text-align: center;
+  border-radius: 3px;
+  width: 80px;
+  height: 80px;
+  line-height: 80px; }
+
+.bg-green {
+  background-color: #2ecc71; }
+
+.bg-blue {
+  background-color: #5543d1; }
+
+.bg-orange {
+  background-color: #ffa808; }
+
+.bg-red {
+  background-color: #ff586e; }
+
+a {
+  background-color: transparent; }
+
+[class*="icon-bx-"][class*="bg-"] a {
+  color: #fff; }
+
+.icon-content {
+  overflow: hidden; }
+
+.icon-bx-wraper.style-4 .title {
+  font-size: 20px;
+  color: #262f5a;
+  font-weight: 500;
+  margin-top: 1rem; }
+
+.on__sm__mb__20 {
+  margin-bottom: 0px;
+  transition: all 0.5s; }
+
+.on__sm__mb__20:hover {
+  transform: translateY(-20px);
+  transition: all 0.5s; }
 
 @media screen and (max-width: 40.375em) {
-  .side__text {
-    font-size: 2rem;
-    margin-bottom: 2rem; } }
-
-.make__website__container {
-  position: relative;
-  background-image: url("../public/images/bg_5.jpg");
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
-  padding: 5rem 0;
-  width: 100%; }
-
-.side__text {
-  color: #242874;
-  text-transform: capitalize;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
-  font-size: 2.5rem; }
-
-.make__website__cta {
-  width: max-content;
-  border: 2px solid #1e90ff;
-  background: #ffffff;
-  padding: 10px 32px;
-  border-radius: 100px;
-  color: #1e90ff;
-  cursor: pointer;
-  transition: all 0.5s; }
-  .make__website__cta:hover {
-    transition: all 0.5s;
-    border: 2px solid #1e90ff;
-    color: #ffffff;
-    background-color: #1e90ff; }
-  .make__website__cta i {
-    transform: scale(0.7); }
-  .make__website__cta span {
-    margin-left: 5px; }
-
-@media screen and (max-width: 40.375em) {
-  .side__text {
-    font-size: 2rem;
-    margin-bottom: 2rem; } }
+  .card__container {
+    background-image: url("../public/images/bg_5_90deg.jpg"); }
+  .on__sm__mb__20 {
+    margin-bottom: 30px; }
+  .on__sm__mb__20:hover {
+    transform: translateY(-10px);
+    transition: all 0.5s; } }
 
 .how__we__can__help__container {
   width: 100%; }
   .how__we__can__help__container .page__wrapper .row .column-1 img {
-    height: 500px;
+    height: 580px;
     width: 550px; }
   .how__we__can__help__container .page__wrapper .row .column-2 .about__us {
     background-color: rgba(137, 110, 255, 0.1);
@@ -397,7 +413,7 @@ a {
     color: #242874;
     font-weight: 700;
     margin-bottom: 1.1rem;
-    text-transform: capitalize; }
+    text-transform: uppercase; }
   .how__we__can__help__container .page__wrapper .row .column-2 p {
     color: #242874; }
   .how__we__can__help__container .page__wrapper .row .column-2 .ceo {
@@ -409,13 +425,141 @@ a {
     height: 350px;
     width: 310px; } }
 
+.help__process {
+  margin-top: 5rem; }
+
+.make__website__container {
+  position: relative;
+  background-image: url("../public/images/bg_5.jpg");
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: cover;
+  padding: 5rem 0;
+  width: 100%;
+  margin-top: 5rem; }
+
+.side__text h1 {
+  font-family: "Source Sans Pro", sans-serif;
+  color: #242874;
+  font-weight: 700;
+  margin-bottom: 1.1rem;
+  text-transform: uppercase; }
+
+.make__website__cta {
+  width: max-content;
+  border: 2px solid #1e90ff;
+  background: #ffffff;
+  padding: 10px 32px;
+  border-radius: 10px;
+  color: #1e90ff;
+  cursor: pointer;
+  transition: all 0.5s; }
+  .make__website__cta:hover {
+    transition: all 0.5s;
+    border: 2px solid #1e90ff;
+    color: #ffffff;
+    background-color: #1e90ff; }
+  .make__website__cta i {
+    transform: scale(0.7); }
+  .make__website__cta span {
+    margin-left: 5px; }
+
+@media screen and (max-width: 40.375em) {
+  .side__text {
+    margin-bottom: 2rem; } }
+
+.contact__us__container .page__wrapper .row .column-1 img {
+  height: 500px; }
+
+.input-group {
+  margin-bottom: 20px; }
+
+.input-group-prepend {
+  position: absolute;
+  left: 10px;
+  top: 22.5px;
+  z-index: 99;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background-color: transparent;
+  border-right: 1px solid #1f2471;
+  margin-right: 10px; }
+
+.input-group-append,
+.input-group-prepend {
+  display: flex; }
+
+.input-group-prepend .input-group-text {
+  justify-content: center;
+  padding: 0;
+  width: 40px;
+  height: 20px;
+  background-color: transparent; }
+
+.input-group-text {
+  display: flex;
+  align-items: center;
+  padding: 0.375rem 0.75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  text-align: center;
+  white-space: nowrap;
+  border: 0;
+  outline: none; }
+
+.input-group-prepend .input-group-text {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px; }
+
+.input-group-prepend .input-group-text i {
+  color: #1f2471;
+  font-size: 18px;
+  border: 0;
+  outline: none; }
+
+.input-group-prepend + .form-control,
+.input-group-prepend + .form-control + .bootstrap-select,
+.input-group-prepend + .form-control + .custom-file-label {
+  padding: 10px 20px 10px 65px; }
+
+.form-control::placeholder {
+  color: #888; }
+
+.form-control {
+  box-shadow: 0 0 5px 2px rgba(31, 66, 135, 0.1);
+  height: 45px;
+  border-radius: 10px !important;
+  padding: 10px 20px;
+  position: relative;
+  font-size: 15px;
+  outline: none;
+  border: 0; }
+
+select {
+  word-wrap: normal; }
+
+button,
+select {
+  text-transform: none; }
+
+textarea {
+  height: 200px !important;
+  resize: none; }
+
+@media screen and (max-width: 40.375em) {
+  .contact__us__container .page__wrapper .row .column-1 img {
+    height: 300px; } }
+
 .footer__container {
   position: relative;
   background-image: url("../public/images/bg-footer.png");
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
-  background-color: #242874;
+  background-color: #1e90ff;
   color: #ffffff;
   padding: 5rem 0;
   font-size: 16px;
@@ -470,7 +614,7 @@ a {
 
 .column ul li a::after {
   content: "";
-  background-color: #1e90ff;
+  background-color: #ffffff;
   position: absolute;
   height: 2px;
   width: 0;
@@ -480,7 +624,7 @@ a {
   transition: all 0.5s; }
 
 .column ul li:hover > a {
-  color: #1e90ff;
+  color: #ffffff;
   padding: 0px 0px 0px 25px; }
 
 .column ul li:hover > a:after {
@@ -530,7 +674,7 @@ a {
     .social__icons a:hover {
       transition: all 0.5s;
       color: #ffffff;
-      background-color: #1e90ff;
+      background-color: #242874;
       opacity: 1; }
 
 @media screen and (max-width: 40.375em) {
