--- a/scss/_headSectionComponent.scss
+++ b/scss/_headSectionComponent.scss
@@ -83,8 +83,8 @@
       h1 {
         font-family: $sourceSansPro, sans-serif;
         font-weight: 700;
-        font-size: 54px;
-        text-transform: capitalize;
+        font-size: 60px;
+        text-transform: uppercase;
         // line-height: 64.8px;
         margin: 0.5rem 0;
         > span {
@@ -107,12 +107,13 @@
         // margin-top: -100px;
         .column-1 {
           .slogan__1 {
-            font-size: 1.1rem;
+            font-size: 1rem;
             // padding-right: 0;
             // display: none;
           }
           .slogan__1__p {
             padding-right: 0;
+            font-size: 15.5px;
           }
           .custom__class {
             width: max-content;
@@ -120,7 +121,7 @@
           }
 
           h1 {
-            font-size: 2.2rem;
+            font-size: 1.9rem;
           }
         }
         .column-2 {
