--- a/scss/_navComponent.scss
+++ b/scss/_navComponent.scss
@@ -19,7 +19,7 @@ $scale: 0.7;
   transition: all 0.5s;
   position: fixed;
   z-index: 100;
-  // color: $white;
+  color: $darkBlue;
 }
 
 .bg__white {
@@ -138,7 +138,7 @@ $scale: 0.7;
   border: 2px solid $blue;
   background: $blue;
   padding: 10px 32px;
-  border-radius: 100px;
+  border-radius: 10px;
   color: $white;
   cursor: pointer;
   transition: all 0.5s;
