--- a/scss/_makeWebsiteComponent.scss
+++ b/scss/_makeWebsiteComponent.scss
@@ -22,7 +22,7 @@
 .make__website__cta {
   width: max-content;
   border: 2px solid $blue;
-  background: $white;
+  background: transparent;
   padding: 10px 32px;
   border-radius: 10px;
   color: $blue;
