--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,17 @@
 @import "variables";
 @import "global";
+
+@import "backToTop";
 @import "navComponent";
 @import "headerComponent";
 @import "headSectionComponent";
+@import "awesomeServiceComponent";
 @import "cardComponent";
 @import "howWeCanHelpComponent";
 @import "helpProcessComponent";
-@import "makeWebsiteComponent";
+@import "ourLatestProject";
+@import "testimonials";
 @import "contactUsComponent";
+@import "makeWebsiteComponent";
 
 @import "footerComponent";
