--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   padding: 0;
   margin: 0;
@@ -31,4 +34,10 @@ a {
     max-width: 100%;
     margin: 1.5rem;
   }
+}
+.show {
+  display: block;
+}
+.hide {
+  display: none;
 }
