--- a/scss/_headerComponent.scss
+++ b/scss/_headerComponent.scss
@@ -14,13 +14,13 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: $darkBlue;
+  background: $blue;
   opacity: 0.7;
 }
 
 .h1 {
   color: $white;
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: 900;
   text-transform: capitalize;
   z-index: 11;
@@ -40,4 +40,13 @@
   margin-right: 5px;
   text-transform: capitalize;
   font-weight: 600;
+}
+@media screen and (max-width: 40.375em) {
+  .header__container {
+    height: 350px;
+
+    h1 {
+      font-size: 2rem;
+    }
+  }
 }
