--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a {
   height: 100%;
   width: 100%;
   background-color: #000000;
-  opacity: 0.5;
+  opacity: 0.7;
   z-index: 999;
   position: fixed; }
 
@@ -261,6 +261,71 @@ a {
 
 .nav__cta span {
   margin-left: 5px; }
+
+.hamburger {
+  display: none; }
+
+.close__nav__btn {
+  display: none; }
+
+@media screen and (max-width: 40.375em) {
+  .nav {
+    height: 25px; }
+    .nav .logo > a,
+    .nav .logo > a:hover {
+      font-size: 1.4rem; }
+  .hamburger {
+    display: block;
+    background: transparent;
+    color: #242874;
+    outline: none;
+    border: 0;
+    transform: scale(1.2); }
+  .nav__menu {
+    padding-left: 0;
+    background: #ffffff;
+    position: fixed;
+    top: 0;
+    left: -300px;
+    height: 100vh;
+    width: 80%;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 0;
+    padding: 50px 2rem; }
+    .nav__menu .nav__item {
+      display: block;
+      width: 100%;
+      padding: 5px 1rem;
+      border-bottom: 1px solid #1e90ff;
+      margin-top: 10px;
+      margin-bottom: 2px; }
+    .nav__menu .has__sub__menu a {
+      display: flex;
+      justify-content: space-between; }
+    .nav__menu .nav__close__btn {
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-end;
+      margin-bottom: 2rem; }
+      .nav__menu .nav__close__btn .close__nav__btn {
+        display: block;
+        height: 50px;
+        width: 50px;
+        border-radius: 10px;
+        cursor: pointer;
+        border: 0;
+        outline: none;
+        color: #ffffff;
+        background: #ff586e;
+        padding: 1rem;
+        line-height: 0;
+        z-index: 999; }
+  .show_nav_menu {
+    left: 0; } }
 
 .header__container {
   position: relative;
