--- a/scss/_navComponent.scss
+++ b/scss/_navComponent.scss
@@ -156,7 +156,84 @@ $scale: 0.7;
 .nav__cta span {
   margin-left: 5px;
 }
+.hamburger {
+  display: none;
+}
+.close__nav__btn {
+  display: none;
+}
+@media screen and (max-width: 40.375em) {
+  .nav {
+    height: 25px;
+    .logo > a,
+    .logo > a:hover {
+      font-size: 1.4rem;
+    }
+  }
+  .hamburger {
+    display: block;
+    background: transparent;
+    color: $darkBlue;
+    outline: none;
+    border: 0;
+    transform: scale(1.2);
+  }
+  .nav__menu {
+    padding-left: 0;
+    background: $white;
+    position: fixed;
+    top: 0;
+    left: -300px;
+    height: 100vh;
+    width: 80%;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 0;
+    padding: 50px 2rem;
+    // display: none;
+    // :first-child {
+    //   margin-bottom: 1rem;
+    // }
 
-// .bg__transparent {
-//   display: none;
-// }
+    .nav__item {
+      display: block;
+      width: 100%;
+      padding: 5px 1rem;
+      // background-color: rgba(137, 110, 255, 0.1);
+      border-bottom: 1px solid $blue;
+      margin-top: 10px;
+      margin-bottom: 2px;
+    }
+    .has__sub__menu a {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .nav__close__btn {
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-end;
+      margin-bottom: 2rem;
+      .close__nav__btn {
+        display: block;
+        height: 50px;
+        width: 50px;
+        border-radius: 10px;
+        cursor: pointer;
+        border: 0;
+        outline: none;
+        color: $white;
+        background: $bg-red;
+        padding: 1rem;
+        line-height: 0;
+        z-index: 999;
+      }
+    }
+  }
+  .show_nav_menu {
+    left: 0;
+  }
+}
