--- a/scss/_makeWebsiteComponent.scss
+++ b/scss/_makeWebsiteComponent.scss
@@ -42,6 +42,10 @@
   span {
     margin-left: 5px;
   }
+  .fa-phone {
+    transform: scale(1.16);
+    margin-right: 5px;
+  }
 }
 
 @media screen and (max-width: 40.375em) {
