--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,5 +13,5 @@
 @import "testimonials";
 @import "contactUsComponent";
 @import "makeWebsiteComponent";
-
+@import "headFeature";
 @import "footerComponent";
