--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,9 @@ a {
     position: fixed;
     z-index: 999;
     height: 95%;
-    width: 95%; } }
+    width: 95%; }
+  .modal__overlay {
+    top: 73px; } }
 
 @keyframes upFromDown {
   49% {
@@ -286,7 +288,7 @@ a {
     padding-left: 0;
     background: #ffffff;
     position: fixed;
-    top: 0;
+    top: 73px;
     left: -100%;
     height: 100vh;
     width: 80%;
