--- a/scss/_navComponent.scss
+++ b/scss/_navComponent.scss
@@ -184,7 +184,7 @@ $scale: 0.7;
     padding-left: 0;
     background: $white;
     position: fixed;
-    top: 0;
+    top: 73px;
     left: -100%;
     height: 100vh;
     width: 80%;
