--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,16 @@ a {
   z-index: 999;
   position: fixed; }
 
+.modal__overlay__on__mobile {
+  top: 73px;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+  opacity: 0.7;
+  z-index: 999;
+  position: fixed; }
+
 @media screen and (max-width: 40.375em) {
   .modal__dialog {
     padding: 0rem;
@@ -124,9 +134,7 @@ a {
     position: fixed;
     z-index: 999;
     height: 95%;
-    width: 95%; }
-  .modal__overlay {
-    top: 73px; } }
+    width: 95%; } }
 
 @keyframes upFromDown {
   49% {
