--- a/scss/_backToTop.scss
+++ b/scss/_backToTop.scss
@@ -97,6 +97,17 @@
   z-index: 999;
   position: fixed;
 }
+
+.modal__overlay__on__mobile {
+  top: 73px;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+  opacity: 0.7;
+  z-index: 999;
+  position: fixed;
+}
 @media screen and (max-width: 40.375em) {
   .modal__dialog {
     padding: 0rem;
@@ -105,8 +116,5 @@
     z-index: 999;
     height: 95%;
     width: 95%;
-  }
-  .modal__overlay {
-    top: 73px;
   }
 }
