--- a/scss/_cardComponent.scss
+++ b/scss/_cardComponent.scss
@@ -32,11 +32,13 @@
 .icon-bx-wraper.style-4 {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 10px 4px rgba(31, 66, 135, 0.1);
+  // box-shadow: 0 0 10px 4px rgba(31, 66, 135, 0.1);
   padding: 30px;
   transition: all 0.5s;
 }
-
+.icon-bx-wraper.style-4:hover {
+  box-shadow: 0 0 10px 4px rgba(31, 66, 135, 0.1);
+}
 .icon-bx-wraper .style-4 .icon-bx-sm {
   width: 70px;
   height: 70px;
@@ -93,6 +95,7 @@ a {
 .on__sm__mb__20:hover {
   transform: translateY(-20px);
   transition: all 0.5s;
+  // box-shadow: 0 0 10px 4px rgba(31, 66, 135, 0.1);
 }
 @media screen and (max-width: 40.375em) {
   .card__container {
